<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200">

    <Button
        android:id="@+id/addrest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:backgroundTint="#E10DCC"
        android:onClick="addrestaurant"
        android:text="@string/add_restaurant_location"
        app:layout_constraintBottom_toTopOf="@+id/showrest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/showrest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:onClick="showallrestaurants"
        android:text="@string/show_all_restaurants"
        android:backgroundTint="#E10DCC"
        app:layout_constraintBottom_toTopOf="@+id/restaurantlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/restaurantlogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/restaurant"
        />

    <ImageView
        android:id="@+id/restaurantimage"
        android:layout_width="wrap_content"
        android:layout_height="327dp"
        android:contentDescription="@string/resimage"
        android:scaleType="fitXY"
        android:src="@drawable/startuprestaurant"
        app:layout_constraintBottom_toTopOf="@+id/addrest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        />

</androidx.constraintlayout.widget.ConstraintLayout>