<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200">

    <EditText
        android:id="@+id/restaurantname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/enter_restaurant_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/autofragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/getposition"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="98dp"
        android:backgroundTint="#E10DCC"
        android:onClick="getcurrentposition"
        android:text="@string/get_current_position"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/savelocation"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="101dp"
        android:textColor="@color/black"
        android:backgroundTint="#E10DCC"
        android:onClick="saveplace"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showlocation"
        app:layout_constraintVertical_bias="0.55" />

    <Button
        android:id="@+id/showlocation"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="94dp"
        android:backgroundTint="#E10DCC"
        android:onClick="showlocation"
        android:text="@string/show_location"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getposition" />

</androidx.constraintlayout.widget.ConstraintLayout>